--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -36,6 +36,8 @@ a {
 img {
   display: block;
   max-width: 100%;
+  max-height: 100%;
+  margin-inline: auto;
   border-radius: inherit;
   object-fit: cover;
 }
