--- a/frontend/src/css/user-home.css
+++ b/frontend/src/css/user-home.css
@@ -4,11 +4,11 @@
 
 .user__home .part__items {
     width: 100%;
-    height: 16em;
+    height: 14em;
     overflow-x: auto;
 }
 
 .user__home .part__items > * {
-    width: 12em;
-    max-height: 100%;
+    max-width: 12em;
+    height: 100%;
 }
